// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Touchable with children throws error for multiple children 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  borderlessRipple={false}
  disabled={false}
  onPress={[Function]}
  rippleColor="rgba(0, 0, 0, .32)"
>
  <DummyTranslation
    id="this is OK"
  />
</TouchableOpacity>
`;

exports[`Touchable with children throws error for multiple children 2`] = `
<TouchableOpacity
  activeOpacity={0.5}
  borderlessRipple={false}
  disabled={false}
  onPress={[Function]}
  rippleColor="rgba(0, 0, 0, .32)"
>
  <View>
    <DummyTranslation
      id="line 1"
    />
    <DummyTranslation
      id="line 2"
    />
  </View>
</TouchableOpacity>
`;

exports[`Touchable with children throws error for multiple children 3`] = `"React.Children.only expected to receive a single React element child."`;
